--- a/Application/aspnet-core-dotnet-core/Pages/Contact.cshtml
+++ b/Application/aspnet-core-dotnet-core/Pages/Contact.cshtml
@@ -7,6 +7,7 @@
 <h4>Your contact page.</h4>
 
 <address>
+    Sahil Shaikh <br/>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
